--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
       "react-dom": "^19.1.0",
       "@types/react": "^19.1.0",
       "@types/react-dom": "^19.1.0",
-      "dompurify": "^3.2.4"
+      "dompurify": "^3.2.4",
+      "tmp": "^0.2.4"
     }
   },
   "config": {
